@@ -8,6 +8,7 @@ therion:
    (withlinearshading and withradialshading options)
  * support for smooth colour transitions of scrap backgrounds in PDF maps
    if the map-fg is coloured by altitude
+ * added smooth-shading <off/quick> layout switch - quick is default
  * reimplemented internal processing of patterns and transparent colors in
    MetaPost (incompatible changes: the drawing option 'withtransparentcolor',
    macro 'def_transparent_rgb' and predefined transparent colors tr_bg,
